--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87a792">  <td>24/03/11 09:46:14</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Createacctest.setup()[pri:0, instance:testpkgg.Createacctest@5e600dd5]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250142026</td>   <td></td> </tr>
-<tr bgcolor="87a792">  <td>24/03/11 09:46:19</td>   <td>4205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Createacctest.signinmtd()[pri:0, instance:testpkgg.Createacctest@5e600dd5]">signinmtd</td> 
-  <td>main@1250142026</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>24/04/04 12:12:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Amazonesampleprgm.amazonpagemtd()[pri:0, instance:Testngpkg.Amazonesampleprgm@1b11171f]">amazonpagemtd</td> 
+  <td>main@1621002296</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>24/04/04 12:12:42</td>   <td>-2845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Amazonesampleprgm.setup()[pri:0, instance:Testngpkg.Amazonesampleprgm@1b11171f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1621002296</td>   <td></td> </tr>
 </table>
