--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63bcb1">  <td>24/02/21 09:06:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Differentbrowser.chrome(java.lang.String)[pri:0, instance:Testngpkg.Differentbrowser@957e06]">&gt;&gt;chrome</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="63bcb1">  <td>24/02/21 09:06:22</td>   <td>5004</td> <td>&nbsp;</td><td title="&gt;&gt;Differentbrowser.chrome(java.lang.String)[pri:0, instance:Testngpkg.Differentbrowser@6fdbe764]">&gt;&gt;chrome</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="63bcb1">  <td>24/02/21 09:06:31</td>   <td>13481</td> <td>&nbsp;</td><td title="&gt;&gt;Differentbrowser.chrome(java.lang.String)[pri:0, instance:Testngpkg.Differentbrowser@3012646b]">&gt;&gt;chrome</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="63bcb1">  <td>24/02/21 09:06:20</td>   <td>2833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Differentbrowser.test()[pri:0, instance:Testngpkg.Differentbrowser@957e06]">test</td> 
-  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="63bcb1">  <td>24/02/21 09:06:29</td>   <td>11437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Differentbrowser.test()[pri:0, instance:Testngpkg.Differentbrowser@6fdbe764]">test</td> 
-  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="63bcb1">  <td>24/02/21 09:06:38</td>   <td>20919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Differentbrowser.test()[pri:0, instance:Testngpkg.Differentbrowser@3012646b]">test</td> 
-  <td>main@2028265136</td>   <td></td> </tr>
+<tr bgcolor="929eff">  <td>24/03/31 12:16:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parameterization.test(java.lang.String)[pri:0, instance:Testngpkg.Parameterization@1de76cc7]">test</td> 
+  <td>main@1594138273</td>   <td></td> </tr>
 </table>
